<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.VehicleDetailsActivity">

    <LinearLayout
        android:id="@+id/linearLayoutVehicleDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rect"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewPlateDetails"
            android:hint="@string/plate"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <Space
            android:layout_width="100dp"
            android:layout_height="5dp"/>

        <TextView
            android:id="@+id/textViewModelDetails"
            android:hint="@string/model"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <Space
            android:layout_width="100dp"
            android:layout_height="5dp"/>

        <TextView
            android:id="@+id/textViewColorDetails"
            android:hint="@string/color"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewPaymentMethods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/payment_methods"
        android:textAlignment="center"
        android:textColorHint="@color/blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutVehicleDetails" />

    <RadioGroup
        android:id="@+id/radioGroupDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPaymentMethods">

        <RadioButton
            android:id="@+id/btnRadioMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_money"
            android:textSize="16sp"
            android:onClick="onRadioButtonDetails"/>

        <RadioButton
            android:id="@+id/btnRadioCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_credit"
            android:textSize="16sp"
            android:onClick="onRadioButtonDetails"/>

        <RadioButton
            android:id="@+id/btnRadioDebit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_debit"
            android:textSize="16sp"
            android:onClick="onRadioButtonDetails"/>

        <RadioButton
            android:id="@+id/btnRadioTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_ticket"
            android:textSize="16sp"
            android:onClick="onRadioButtonDetails"/>

        <RadioButton
            android:id="@+id/btnRadioPix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_pix"
            android:textSize="16sp"
            android:onClick="onRadioButtonDetails"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnVehicleEnter"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green"
        android:hint="@string/btn_vehicle_out"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>